--- a/style.css
+++ b/style.css
@@ -1,41 +1,30 @@
-body,
-html {
-  max-width: 100%;
-  height: 100%;
-  font-family: 'Montserrat', sans-serif;
-   background: url(header.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@1,300&display=swap');
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Roboto', sans-serif;
+    margin: auto;
 }
 h1{
-	font-size: 3rem;
-	color: #e2dbdb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
 }
-
-hr{
-	border-color:  #ee4b08;
-	border-width: 3px;
-	max-width: 65px;
+.pro__pic img{
+    width: 140px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
 }
-.buffer{
-	height: 9rem;
-}
-.btn{
-	font-size: 700;
-	border-radius: 300px;
-	text-transform: uppercase;
-
-}
-.btn-primary{
-	background-color: #ee4b08;
-	border: #F05F44;
-}
-.btn-primary:hover{
-	background-color: #F05F44;
-}
-.btn-xl{
-	padding: 1rem 2rem;
-
+p{
+    text-align: center;
+    padding: 20px;
 }
